--- a/Sales_Forecasting/styles/sign_inUI_Style.css
+++ b/Sales_Forecasting/styles/sign_inUI_Style.css
@@ -1,128 +1,44 @@
 body {
-    background-size: cover;
     background-image: url("../Resources/background.webp");
-    background-color: RGB(28, 24, 24);
-    margin: 0;
+}
+
+
+/*
+.my-container {
+    border: 1px solid green;
+}
+
+.my-row {
+    border: 3px solid red;
+}
+
+.my-col {
+    border: 3px solid blue;
+}
+*/
+
+h1 {
+    font-size: 500% !important;
+}
+
+.fronttext {
+    text-align: center;
+    font-family: "Bellota Text";
+    letter-spacing: 2px;
+}
+
+.largetext {
+    font-size: 250% !important;
+}
+
+.home-btn {
+    margin-top: 2%;
+    margin-right: 2%;
+    font-size: x-large !important;
+    text-align: right;
+    font-size: large;
     color: white;
-    background-attachment: fixed;
-    user-select: none;
-    margin: 0;
-    height: 100%;
-    overflow: hidden;
-}
-
-#blackscreen {
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.931);
-    position: sticky;
-}
-
-#loader {
-    position: fixed;
-    left: 50%;
-    top: 50%;
-    z-index: 1;
-    width: 150px;
-    height: 150px;
-    margin: -75px 0 0 -75px;
-    border: 16px solid #f3f3f3;
-    border-radius: 50%;
-    border-right: 16px solid #1b5074;
-    border-left: 16px solid #1b5074;
-    width: 120px;
-    height: 120px;
-    -webkit-animation: spin 2s linear infinite;
-    animation: spin 2s linear infinite;
-    z-index: 3;
-}
-
-#loading {
-    position: fixed;
-    color: white;
-    left: 44.5%;
-    font-size: 300%;
-    top: 25%;
-    z-index: 1;
-    width: 150px;
-    z-index: 2;
-    height: 150px;
-}
-
-#overlay {
-    position: fixed;
-    /* Sit on top of the page content */
-    /* Hidden by default */
-    width: 100%;
-    /* Full width (cover the whole page) */
-    height: 100%;
-    /* Full height (cover the whole page) */
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: rgba(0, 0, 0, 0.8);
-    /* Black background with opacity */
-    z-index: 2;
-    /* Specify a stack order in case you're using a different order for other elements */
-    cursor: pointer;
-    /* Add a pointer on hover */
-}
-
-@keyframes spin {
-    0% {
-        transform: rotate(0deg);
-    }
-    100% {
-        transform: rotate(360deg);
-    }
-}
-
-body {
-    height: 100%;
-    overflow: auto;
-}
-
-li {
-    text-decoration: none;
     list-style: none;
-}
-
-a {
-    text-decoration: none;
-}
-
-#index_introduction_top {
-    height: 20%;
-    width: 100%;
-    position: absolute;
-}
-
-#index_introduction_logo {
-    width: 25%;
-    margin-top: 1%;
-    margin-left: 6%;
-    position: absolute;
-}
-
-#index_introduction_menu {
-    margin-right: 7%;
-    margin-top: 3%;
-}
-
-#main_menu {
-    color: white;
-    margin-left: 3%;
-    float: right;
-    font-size: 150%;
-}
-
-#main_menu:hover {
-    text-decoration: underline;
-}
-
-#client_info::placeholder {
-    color: white;
 }
 
 #client_info,
@@ -141,202 +57,86 @@ a {
     margin-left: 2%;
     margin-right: 2%;
     margin-top: 2%;
-    width: 60%;
+    width: 70%;
     border-width: 4px;
     letter-spacing: 1px;
     font-family: "Oswald", sans-serif;
     font-size: 130%;
 }
 
-#info_list {
-    /* location of the text fields 
-  TODO - Polish down a bit*/
-    text-align: center;
-    position: absolute;
-    top: 40%;
-    width: 100%;
+#client_info::placeholder,
+#password_info::placeholder {
+    color: white;
 }
 
-#signin_main_lable {
-    text-align: center;
-    position: absolute;
-    font-family: "Bellota Text";
-    top: 15%;
-    width: 100%;
-    font-size: 300%;
-    letter-spacing: 2px;
-}
-
-#signin_btn:hover {
-    background-color: coral;
-}
-
+#signin_btn:hover,
 #reg_btn:hover {
     background-color: coral;
 }
 
 #signin_btn {
+    margin-top: 10%;
     color: white;
     letter-spacing: 3px;
-    font-size: 150%;
     border-radius: 50px;
-    padding: 1%;
     text-align: center;
     border-style: solid;
     border-width: 1px;
     font-weight: bold;
     font-family: "Oswald", sans-serif;
-    position: relative;
-    width: 100%;
-    padding: 3%;
+    font-size: 150%;
+    padding: 5px;
+    margin-left: 50%;
+    margin-right: 10%;
 }
 
 #reg_btn {
+    margin-top: 10%;
     color: white;
     letter-spacing: 3px;
-    font-size: 150%;
     border-radius: 50px;
-    padding: 1%;
     text-align: center;
     border-style: solid;
     border-width: 1px;
     font-weight: bold;
     font-family: "Oswald", sans-serif;
-    position: relative;
-    width: 100%;
-    padding: 3%;
+    font-size: 150%;
+    padding: 5px;
+    margin-left: 10%;
+    margin-right: 50%;
 }
 
-#signin_button_reg {
-    position: absolute;
-    top: 75%;
-    left: 25%;
-    width: 20%;
-    float: left;
-}
-
-#signin_button_signin {
-    position: absolute;
-    top: 75%;
-    left: 55%;
-    width: 20%;
-    float: left;
+.nounderline {
+    text-decoration: none !important;
 }
 
 @media screen and (max-width: 1000px) {
-    #index_introduction_top {
-        height: 20%;
-        width: 100%;
-        position: absolute;
-    }
-    #index_introduction_logo {
-        width: 25%;
-        margin-top: 1%;
-        margin-left: 6%;
-        position: absolute;
-    }
-    #index_introduction_menu {
-        margin-right: 7%;
-        margin-top: 3%;
-    }
-    #main_menu {
-        color: white;
-        margin-left: 3%;
-        float: right;
-        font-size: 150%;
-    }
-    #main_menu:hover {
-        text-decoration: underline;
-    }
-    #client_info::placeholder {
-        color: white;
-    }
-    #client_info {
-        /* properties of the text fields */
-        color: white;
-        background: none;
-        outline: none;
-        text-align: left;
-        letter-spacing: 3px;
-        padding: 1%;
-        border-top-style: none;
-        border-right-style: none;
-        border-top-left-radius: 30px;
-        border-bottom-left-radius: 30px;
-        margin-left: 2%;
-        margin-right: 2%;
-        margin-top: 2%;
-        width: 60%;
-        border-width: 4px;
-        letter-spacing: 1px;
-        font-family: "Oswald", sans-serif;
-        font-size: 130%;
-    }
-    #info_list {
-        /* location of the text fields 
-  TODO - Polish down a bit*/
-        text-align: center;
-        position: absolute;
-        top: 55%;
-        width: 100%;
-    }
-    #signin_main_lable {
-        text-align: center;
-        position: absolute;
-        font-family: "Bellota Text";
-        top: 8%;
-        width: 100%;
-        font-size: 300%;
-        letter-spacing: 2px;
-    }
-    #signin_btn:hover {
-        background-color: coral;
-    }
-    #reg_btn:hover {
-        background-color: coral;
-    }
+    #reg_btn,
     #signin_btn {
-        color: white;
-        letter-spacing: 3px;
+        margin-top: 0%;
+        margin-left: 5%;
+        margin-right: 5%;
         font-size: 100%;
-        border-radius: 50px;
-        padding: 1%;
-        text-align: center;
-        border-style: solid;
-        border-width: 1px;
-        font-weight: bold;
-        font-family: "Oswald", sans-serif;
-        position: relative;
-        width: 300%;
-        padding: 3%;
     }
-    #reg_btn {
-        color: white;
-        letter-spacing: 3px;
-        font-size: 100%;
-        border-radius: 50px;
-        padding: 1%;
-        text-align: center;
-        border-style: solid;
-        border-width: 1px;
-        font-weight: bold;
-        font-family: "Oswald", sans-serif;
-        position: relative;
-        width: 350%;
-        padding: 3%;
+    #client_info::placeholder,
+    #password_info::placeholder {
+        font-size: small;
+        padding-left: 2%;
     }
-    #signin_button_reg {
-        position: absolute;
-        top: 75%;
-        left: 0%;
-        width: 20%;
-        float: left;
+    .home-btn {
+        margin-top: 1%;
+        margin-right: 1%;
+        font-size: small !important;
     }
-    #signin_button_signin {
-        position: absolute;
-        top: 75%;
-        left: 50%;
-        width: 20%;
-        float: left;
+    #client_info,
+    #password_info {
+        font-size: 80% !important;
+        padding-left: 2%;
+    }
+    h1 {
+        font-size: 120% !important;
+    }
+    h2 {
+        font-size: 80% !important;
     }
 }
